k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: vk-paints
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
